Fix image height too big on mobile player

--- a/src/features/footer/MobilePlayer.scss
+++ b/src/features/footer/MobilePlayer.scss
@@ -21,7 +21,8 @@
         margin: 5%;
         // border: 1px solid black;
         img {
-            height: 100%;
+            object-fit: fill;
+            max-height: 100%;
             border-radius: 5%;
         }
     }
